(fix): Mobile "Load more" button overflowing

--- a/src/app/modules/pro/channel/list/list.component.scss
+++ b/src/app/modules/pro/channel/list/list.component.scss
@@ -61,6 +61,7 @@ m-pro--channel-list {
     cursor: pointer;
     text-align: center;
     font-weight: 300;
+    box-sizing: border-box;
     color: var(--m-pro--text-color);
     background-color: var(--m-pro--transparent-background-color);
 
